--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -16,8 +16,8 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
-    "@enkryptcom/types": "workspace:^",
-    "@enkryptcom/utils": "workspace:^",
+    "@enkryptcom/types": "0.0.1",
+    "@enkryptcom/utils": "0.0.3",
     "bignumber.js": "^9.1.1",
     "eventemitter3": "^5.0.1",
     "isomorphic-ws": "^5.0.0",
