fix: packages/request/package.json to reduce vulnerabilities (#24)
The following vulnerabilities are fixed with an upgrade:
- https://snyk.io/vuln/SNYK-JS-WORDWRAP-3149973

Co-authored-by: snyk-bot <snyk-bot@snyk.io>

--- a/packages/request/package.json
+++ b/packages/request/package.json
@@ -16,8 +16,13 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
+ snye9c99a4b26ed6ad4e1c2
+    "@enkryptcom/types": "0.0.1",
+    "eventemitter3": "^5.0.0",
+
     "@enkryptcom/types": "workspace:^",
     "eventemitter3": "^5.0.1",
+ 
     "isomorphic-ws": "^5.0.0",
     "json-rpc-2.0": "^1.6.0",
     "node-fetch": "^2.6.12",
