fix: packages/keyring/package.json to reduce vulnerabilities (#18)
The following vulnerabilities are fixed with an upgrade:
- https://snyk.io/vuln/SNYK-JS-WORDWRAP-3149973

Co-authored-by: snyk-bot <snyk-bot@snyk.io>

--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -20,8 +20,8 @@
     "@enkryptcom/signer-bitcoin": "workspace:^",
     "@enkryptcom/signer-ethereum": "workspace:^",
     "@enkryptcom/signer-polkadot": "workspace:^",
-    "@enkryptcom/storage": "workspace:^",
-    "@enkryptcom/types": "workspace:^",
+    "@enkryptcom/storage": "0.0.2",
+    "@enkryptcom/types": "0.0.1",
     "@enkryptcom/utils": "workspace:^",
     "@polkadot/util": "^12.3.2",
     "assert": "^2.0.0",
