fix: packages/extension/package.json to reduce vulnerabilities (#26)
The following vulnerabilities are fixed with an upgrade:
- https://snyk.io/vuln/SNYK-JS-PROTOBUFJS-5756498

Co-authored-by: snyk-bot <snyk-bot@snyk.io>

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@babel/runtime": "^7.22.6",
     "@enkryptcom/extension-bridge": "workspace:^",
-    "@enkryptcom/hw-wallets": "workspace:^",
+    "@enkryptcom/hw-wallets": "0.0.2",
     "@enkryptcom/keyring": "workspace:^",
     "@enkryptcom/request": "workspace:^",
     "@enkryptcom/storage": "workspace:^",
